Changed firestore storing movie name as ID because of bug. Added Static vote buttons with rating text. Added check for whitespaces before sending comment.

--- a/src/components/css/commentSection.css
+++ b/src/components/css/commentSection.css
@@ -34,11 +34,3 @@
     width: 20px;
     height: 20px;
 }
-
-#commentList * {
-    color: black;
-    background-color: white;
-    margin: 0.5rem 0;
-    padding: 1rem;
-    border-radius: 5px;
-}
